--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inner Alchemy</title>
+
+    <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personality App</title>
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+    <!-- SEO Description -->
+    <meta name="description" content="Decode your patterns. Reclaim your essence. Inner Alchemy is a symbolic psychological experience that blends depth psychology, relational insight, and mythic reflection — crafted to illuminate your emotional world." />
+
+    <!-- Open Graph for Social Sharing -->
+    <meta property="og:title" content="Inner Alchemy" />
+    <meta property="og:description" content="Decode your patterns. Reclaim your essence. Inner Alchemy is a symbolic psychological experience that blends depth psychology, relational insight, and mythic reflection — crafted to illuminate your emotional world." />
+    <meta property="og:image" content="/cover.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://heliosynthesis.org" />
+
+    <!-- Twitter Card Preview -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Inner Alchemy" />
+    <meta name="twitter:description" content="Decode your patterns. Reclaim your essence. Begin your symbolic journey inward." />
+    <meta name="twitter:image" content="/cover.jpg" />
 </head>
 
 <body>
