Update landing page, SEO tags, and social preview metadata

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
     <!-- SEO Description -->
-    <meta name="description" content="Decode your patterns. Reclaim your essence. Inner Alchemy is a symbolic psychological experience that blends depth psychology, relational insight, and mythic reflection — crafted to illuminate your emotional world." />
+    <meta name="description" content="Your Psyche in Profile — a symbolic synthesis of IFS, Enneagram, and Transactional Analysis, personalized through your inner patterns." />
 
     <!-- Open Graph for Social Sharing -->
-    <meta property="og:title" content="Inner Alchemy" />
-    <meta property="og:description" content="Decode your patterns. Reclaim your essence. Inner Alchemy is a symbolic psychological experience that blends depth psychology, relational insight, and mythic reflection — crafted to illuminate your emotional world." />
+    <meta property="og:title" content="Your Psyche in Profile" />
+    <meta property="og:description" content="A symbolic synthesis of IFS, Enneagram, and Transactional Analysis — personalized through your inner patterns." />
     <meta property="og:image" content="/cover.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://heliosynthesis.org" />
 
     <!-- Twitter Card Preview -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Inner Alchemy" />
-    <meta name="twitter:description" content="Decode your patterns. Reclaim your essence. Begin your symbolic journey inward." />
+    <meta name="twitter:title" content="Your Psyche in Profile" />
+    <meta name="twitter:description" content="A symbolic synthesis of IFS, Enneagram, and Transactional Analysis — personalized through your inner patterns." />
     <meta name="twitter:image" content="/cover.jpg" />
+
 </head>
 
 <body>
